force-app/main/default/objects/Country_Code_Info__mdt/Country_Code_Info__mdt.object-meta.xml
<CustomObject>
    <label>Country Code Info</label>
    <pluralLabel>Country Code Info</pluralLabel>
</CustomObject>