force-app/main/default/objects/Country_Code_Info__mdt/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Represents the full name of the country identified by the Country Code (DeveloperName)</description>
    <label>Country Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>