force-app/main/default/objects/Country_Code_Info__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Represents the primary language spoken in this country.</description>
    <label>Language</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>