force-app/main/default/objects/Country_Code_Info__mdt/fields/Queue_Family__c.field-meta.xml
<CustomField>
    <fullName>Queue_Family__c</fullName>
    <description>Represents the queue that will take ownership of new Opportunities when they&apos;re created based on country, language, and/or industry.</description>
    <label>Queue Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ</fullName>
                <default>true</default>
                <label>ANZ</label>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>GAN</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>